první pokyny do listu a jejich zpracování v hlavní aktivitě

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DirectionsActivity"
-            android:label="@string/title_activity_directions"></activity>
+            android:name=".CommandsActivity"
+            android:label="@string/title_activity_commands"/>
     </application>
 
 </manifest>
